test/spec_vectors/conversions/fail/module_2.wat
(module (func (result i32) (i32.trunc_f32_s (i64.const 0))))